# codesage

./: .gitignore  AGENTS.md  BUILD_LOG.md  LICENSE  PLAN.md  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
src/codesage/: __init__.py  ai.py  analysis.py  comparison.py  config.py  evidence.py  models.py  source.py  thresholds.py  ui.py
static/: OFL-SpaceMono.txt
tests/: test_access.py  test_ai.py  test_analysis.py  test_coach.py  test_comparison.py  test_evidence.py  test_maintainability_gate.py  test_reconstruction.py  test_refactor_scope.py  test_source.py  test_ui.py
