[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[project]
name = "codesage"
version = "0.1.0"
description = "Evidence-grounded Python maintainability analysis"
requires-python = ">=3.11,<3.12"
dependencies = [
    "httpx==0.28.1",
    "nbformat==5.10.4",
    "openai==2.46.0",
    "pydantic==2.13.4",
    "radon==6.0.1",
    "streamlit==1.59.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
